k8s/infra/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: catest-envoy-gateway
  namespace: catest
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 53088
      allowedRoutes:
        namespaces:
          from: Same
